<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="moe.ore.txhook.app.fragment.ParserFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/jce"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jce"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pb"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/protobuf"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear"
            style="@style/AppTheme.MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:text="@string/clear_all"
            app:cornerRadius="10dp" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/parse_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.yuyh.jsonviewer.library.moved.ProtocolViewer
            android:id="@+id/parser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/none_data" />

    </LinearLayout>

</LinearLayout>