<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".app.fragment.MainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="45dp"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icon_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                app:cardCornerRadius="36dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/jsonViewer_icon_plus"
                    android:padding="12dp"
                    android:src="@drawable/icon_mobileqq" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tips_view"
                android:layout_width="30dp"
                android:layout_height="13dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/tx_merge"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tips_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="1dp"
                    android:text="@string/merge"
                    android:textColor="@color/white"
                    android:textSize="8sp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/icon_layout"
            android:padding="7dp">

            <TextView
                android:id="@+id/cmd"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/catching_info"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mode"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/cmd"
                android:src="@drawable/ic_baseline_call_received_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cmd"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/uin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="@color/tx_appbar_color"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/seq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/tab_analyse"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="@string/tab_analyse"
                android:textSize="12sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>