<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".app.fragment.SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_info"
        android:textColor="@color/accent"
        android:textStyle="bold" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/select_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="Actions管理"
        app:rightStyle="iconShow" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="自动翻译Merge"
        app:rightStyle="iconCheck" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/auto_merge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="自动分析完Protobuf"
        app:rightStyle="iconCheck" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/ecdh_def"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="强制Ecdh使用默认密钥"
        app:rightStyle="iconCheck" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/switchNHook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="使用新EcdhHook"
        app:rightStyle="iconCheck" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/out_qlog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="输出QQ日志到外部"
        app:rightStyle="iconCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pushapi"
                android:textColor="@color/accent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="16dp"
                android:text="@string/local_address"
                android:textColor="@color/accent"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <com.leon.lib.settingview.LSettingItem
            android:id="@+id/push_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="是否开启PushAPI"
            app:rightStyle="iconSwitch" />

        <com.leon.lib.settingview.LSettingItem
            android:id="@+id/ws_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="是否开启WebSocket"
            app:rightStyle="iconSwitch" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bdh_setting"
        android:textColor="@color/accent"
        android:textStyle="bold" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/forbidTcp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="强制使用HTTP上传数据"
        app:rightStyle="iconCheck" />

    <com.leon.lib.settingview.LSettingItem
        android:id="@+id/claer_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="清理缓存"
        app:rightStyle="iconShow" />
</LinearLayout>